--- CHANGES SINCE UASNIFFER 0.3 ----------------------------------------------

* Added unit test for Firefox 5 beta.
* Added unit test for Firefox 6 beta on Mac OS X 10.7.
* Added unit test for Firefox 8 alpha 1.
* Added unit test for RockMelt 0.9.58.494.
* Added unit test for Opera 11.50.
* Added unit test for Maxthon 3.0 (changed sniffing code to make it work).
* Added unit test for iPad running iOS 3.2.
* Added unit test for Safari 5.0.5 on Mac OS X 10.6.8.


--- CHANGES SINCE UASNIFFER 0.2 ----------------------------------------------

* Detecting RockMelt browser.
* Detecting Chrome Frame engine inside MSIE.
* Detecting Chrome OS.
* Detecting Windows 8.
* Detecting Symbian OS.
* Detecting iPad.
* Detecting old NCSA Mosaic browsers
* Detecting Android tablets.
* Detecting Blackberry browser (instead of just device).
* Detecting Nokia browser.
* Properly detecting (newer) WebKit-based Flock releases.
* Supporting 4 levels in Flock versions.
* Added several agent strings for unit testing.
* Changed "iPhoneOS" string to "iOS"
* Gave the interface of the UserAgent class an overhaul.
* POM now assumes UTF-8 for Java source files.