@@ -1,11 +1,12 @@
 --- CHANGES SINCE UASNIFFER 0.3 ----------------------------------------------
 
+* Added unit tests for Amazon Kindle devices (updated sniffing code).
 * Added unit test for Firefox 5 beta.
 * Added unit test for Firefox 6 beta on Mac OS X 10.7.
 * Added unit test for Firefox 8 alpha 1.
 * Added unit test for RockMelt 0.9.58.494.
 * Added unit test for Opera 11.50.
-* Added unit test for Maxthon 3.0 (changed sniffing code to make it work).
+* Added unit test for Maxthon 3.0 (updated sniffing code).
 * Added unit test for iPad running iOS 3.2.
 * Added unit test for Safari 5.0.5 on Mac OS X 10.6.8.
 
